--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
