--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.11",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "vite": "^2.4.2"
   }
